--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             }
         </style>
     </head>
-    <body>
+    <body style="background-color:mintcream">
       <nav class="navbar navbar-default navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">B.A.G.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,18 +30,40 @@
               <a class="nav-link" href="page2.html">Q&A</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">2</span></a>
+              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">1</span></a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <div class="jumbotron jumbotron-fluid">
+      <div style="background-color:mintcream" class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4"><center>Welcome to the Official B.A.G. Website!</center></h1>
+          <h1 style="font-family:arial" class="display-4"><center>Welcome to the Official B.A.G. Website!</center></h1>
         </div>
       </div>
       <!-- <a class="btn btn-danger" href="page4.html" role="button">Page 4</a> -->
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card text-center">
+            <div style="background-color:mistyrose" class="card-body">
+              <h2 class="card-title">Subscribe to our YouTube channel</h2>
+              <p style="font-size:20px" class="card-text">We provide top-notch non-clickbait gaming content and record-breaking speedruns. (hacked at 3.1M subscribers)</p>
+              <a href="https://www.youtube.com/channel/UCRo0kZQKcJzjd3XZ3oqvi7g" class="btn btn-danger btn-lg">Click Here</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card text-center">
+            <div style="background-color:lightcyan" class="card-body">
+              <h2 class="card-title">Follow our Twitter account</h2>
+              <p style="font-size:20px" class="card-text">We post original tweets and updates on video releases.</p>
+              <a href="https://twitter.com/baaaaag" class="btn btn-primary btn-lg">Click Here</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
 
       <img src="bag.jpg" alt="bag" class="center" height="450px" width="800px">
     </body>
