--- a/page1.html
+++ b/page1.html
@@ -5,8 +5,8 @@
         <title>Page 1</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <body style="background-color:mintcream">
+      <nav class="navbar navbar-default navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">B.A.G.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -23,12 +23,128 @@
               <a class="nav-link" href="page2.html">Q&A</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">2</span></a>
+              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">1</span></a>
             </li>
           </ul>
         </div>
       </nav>
-      <h1>This is page 1!<br></h1>
-      <a class="btn btn-info" href="index.html" role="button">Home</a>
+      <br>
+      <h1><center>Whomst is B.A.G.?</center></h1>
+      <h4><center>
+        B.A.G. was founded by 5 young men who were sick and tired of a capitalist society and finally said enough is enough and decided to
+        give the people the quality content they needed while still holding on to what little virginity they had left. Learn more about these
+        true American heroes down below.</center>
+      </h4> <br>
+
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="albi.jpg" class="card-img" alt="albi">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h2 class="card-title">Albi</h2>
+                  <h5 class="card-text">Strengths:</h5>
+                  <p style="font-size:18px" class="card-text">Has the Albanian mob at his disposal<br>Doesn't have to worry about "be there or be square"<br>Lethal gas<br>Fruity Pebbles</p>
+                  <h5 class="card-text">Weakness:</h5>
+                  <p style="font-size:18px" class="card-text">TikTok baddies</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="dom.jpg" class="card-img" alt="dom">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h2 class="card-title">Dom</h2>
+                  <h5 class="card-text">Strengths:</h5>
+                  <p style="font-size:18px" class="card-text">D1<br>Always finds the firmest grapes<br>Packin(we aint talking cod zombies)<br>Hits dat boy clean</p>
+                  <h5 class="card-text">Weakness:</h5>
+                  <p style="font-size:18px" class="card-text">Jif</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="jason.jpg" class="card-img" alt="jason">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h2 class="card-title">Jason</h2>
+                  <h5 class="card-text">Strengths:</h5>
+                  <p style="font-size:18px" class="card-text">Epic fork knife gamer<br>No hair in ass crack<br>Craisins<br>Long</p>
+                  <h5 class="card-text">Weakness:</h5>
+                  <p style="font-size:18px" class="card-text">Sworn oath to always "wash dem gray"</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="luke.jpg" class="card-img" alt="luke">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h2 class="card-title">Luke</h2>
+                  <h5 class="card-text">Strengths:</h5>
+                  <p style="font-size:18px" class="card-text">Great throat<br>Toasted bread with butter<br>Carrying that WAGON<br>Promising career in the adult film industry</p>
+                  <h5 class="card-text">Weakness:</h5>
+                  <p style="font-size:18px" class="card-text">Daddario</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="mike.jpg" class="card-img" alt="mike">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h2 class="card-title">Mike</h2>
+                  <h5 class="card-text">Strengths:</h5>
+                  <p style="font-size:18px" class="card-text">Virgin<br>Oatmeal<br>Will "beat you into the ground"<br>Kisses anyone(consensually)(guys only)(after 8 shots)</p>
+                  <h5 class="card-text">Weakness:</h5>
+                  <p style="font-size:18px" class="card-text">Virgin</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="guy.jpg" class="card-img" alt="guy">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h2 class="card-title">Bryson</h2>
+                  <h5 class="card-text">Strengths:</h5>
+                  <p style="font-size:18px" class="card-text">Large for his age<br>Over 12"<br>TSA PreCheck<br>A people person</p>
+                  <h5 class="card-text">Weakness:</h5>
+                  <p style="font-size:18px" class="card-text">Forgot to show up to tryouts</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
