--- a/page3.html
+++ b/page3.html
@@ -23,12 +23,12 @@
               <a class="nav-link" href="page2.html">Q&A</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">2</span></a>
+              <a class="nav-link" href="page3.html">Notifications</a>
             </li>
           </ul>
         </div>
       </nav>
-      <h1>This is page 3!<br></h1>
-      <a class="btn btn-info" href="index.html" role="button">Home</a>
+
+      <center><img style="width:100%" src="bernie.jpg" alt="bernie" class="center" height="700px"></center>
     </body>
 </html>
