--- a/page4.html
+++ b/page4.html
@@ -41,8 +41,8 @@
       </nav>
 
       <br>
-      <h1><center>Video Games</center></h1>
-      <h5><center>Here are some of my all-time favorite video games. Check them out!</center></h5>
+      <h1><center>Board Games</center></h1>
+      <h5><center>Here are some of my all-time favorite board games. Check them out!</center></h5>
       <br>
 
       <div class="row row-cols-1 row-cols-md-3">
@@ -50,11 +50,10 @@
           <div class="card mb-3" style="max-width: 700px;">
               <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Skyrim</h2>
-                  <h5 class="card-text">Rated: M</h5>
-                  <h5 class="card-text">Available on: Xbox, PlayStation, PC, Switch</h5>
-                  <h5 class="card-text">Genres: Action role-playing</h5>
-                  <a style="font-size:18px" href="https://elderscrolls.bethesda.net/en/skyrim">Learn More</a>
+                  <h2 class="card-title">Carcassonne</h2>
+                  <h5 class="card-text">Players: 2-5</h5>
+                  <h5 class="card-text">Genre: Tile-based game</h5>
+                  <a style="font-size:18px" href="https://boardgamegeek.com/boardgame/822/carcassonne">Learn More</a>
                 </div>
               </div>
           </div>
@@ -63,11 +62,10 @@
           <div class="card mb-3" style="max-width: 700px;">
               <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Rocket League</h2>
-                  <h5 class="card-text">Rated: E</h5>
-                  <h5 class="card-text">Available on: Xbox, PlayStation, PC, Switch</h5>
-                  <h5 class="card-text">Genres: Sports</h5>
-                  <a style="font-size:18px" href="https://www.rocketleague.com/">Learn More</a>
+                  <h2 class="card-title">Codenames</h2>
+                  <h5 class="card-text">Players: 2-8</h5>
+                  <h5 class="card-text">Genre: Party game</h5>
+                  <a style="font-size:18px" href="https://boardgamegeek.com/boardgame/178900/codenames">Learn More</a>
                 </div>
               </div>
           </div>
@@ -76,11 +74,10 @@
           <div class="card mb-3" style="max-width: 700px;">
               <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Hearthstone</h2>
-                  <h5 class="card-text">Rated: E</h5>
-                  <h5 class="card-text">Available on: PC, Mobile</h5>
-                  <h5 class="card-text">Genres: Digital collectable card game</h5>
-                  <a style="font-size:18px" href="https://playhearthstone.com/en-us/">Learn More</a>
+                  <h2 class="card-title">Bunny Kingdom</h2>
+                  <h5 class="card-text">Players: 2-4</h5>
+                  <h5 class="card-text">Genre: Strategy</h5>
+                  <a style="font-size:18px" href="https://boardgamegeek.com/boardgame/184921/bunny-kingdom">Learn More</a>
                 </div>
               </div>
           </div>
@@ -89,11 +86,10 @@
           <div class="card mb-3" style="max-width: 700px;">
               <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Call of Duty: Modern Warfare</h2>
-                  <h5 class="card-text">Rated: M</h5>
-                  <h5 class="card-text">Available on: Xbox, PlayStation, PC</h5>
-                  <h5 class="card-text">Genres: First-person shooter</h5>
-                  <a style="font-size:18px" href="https://www.callofduty.com/modernwarfare">Learn More</a>
+                  <h2 class="card-title">Settlers of Catan</h2>
+                  <h5 class="card-text">Players: 3-4</h5>
+                  <h5 class="card-text">Genre: Strategy</h5>
+                  <a style="font-size:18px" href="https://www.catan.com/game/catan">Learn More</a>
                 </div>
               </div>
           </div>
@@ -102,11 +98,10 @@
           <div class="card mb-3" style="max-width: 700px;">
               <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">The Witcher 3</h2>
-                  <h5 class="card-text">Rated: M</h5>
-                  <h5 class="card-text">Available on: Xbox, PlayStation, PC, Switch</h5>
-                  <h5 class="card-text">Genres: Action role-playing</h5>
-                  <a style="font-size:18px" href="https://thewitcher.com/en/">Learn More</a>
+                  <h2 class="card-title">Villainous</h2>
+                  <h5 class="card-text">Players: 2-6</h5>
+                  <h5 class="card-text">Genre: Strategy</h5>
+                  <a style="font-size:18px" href="https://boardgamegeek.com/boardgame/256382/disney-villainous">Learn More</a>
                 </div>
               </div>
           </div>
@@ -115,22 +110,21 @@
           <div class="card mb-3" style="max-width: 700px;">
               <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Super Smash Bros. Ultimate</h2>
-                  <h5 class="card-text">Rated: E</h5>
-                  <h5 class="card-text">Available on: Switch</h5>
-                  <h5 class="card-text">Genres: Fighting game</h5>
-                  <a style="font-size:18px" href="https://www.smashbros.com/en_US/">Learn More</a>
+                  <h2 class="card-title">Quacks of Quedlinburg</h2>
+                  <h5 class="card-text">Players: 2-4</h5>
+                  <h5 class="card-text">Genre: Push your luck</h5>
+                  <a style="font-size:18px" href="https://boardgamegeek.com/boardgame/244521/quacks-quedlinburg">Learn More</a>
                 </div>
               </div>
           </div>
         </div>
       </div>
 
-      <h5><center>If you either didn't like my recommendations or finished playing all these games, here are some top video games lists from IGN and Metacritic.</center></h5>
+      <h5><center>If you either didn't like my recommendations or finished playing all these games, here are some top board games lists from BGG and Digital Trends.</center></h5>
       <div class="container">
         <div class="button-wrapper">
-          <a href="https://www.ign.com/lists/top-100-games/89" class="btn btn-info btn-lg mx-auto">IGN</a>
-          <a href="https://www.metacritic.com/browse/games/score/metascore/all/all/filtered" class="btn btn-secondary btn-lg mx-auto">Metacritic</a>
+          <a href="https://boardgamegeek.com/geeklist/241040/50-modern-classics-geeklist-series-opinionated-gam" class="btn btn-success btn-lg mx-auto">BGG</a>
+          <a href="https://www.digitaltrends.com/gaming/best-board-games/" class="btn btn-primary btn-lg mx-auto">Digital Trends</a>
         </div>
       </div>
     </body>
