--- a/index.html
+++ b/index.html
@@ -2,69 +2,82 @@
 
 <html lang="en">
     <head>
-        <title>Official B.A.G.</title>
+        <title>Things To Do</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <style>
-            .center {
-              display: block;
-              margin-left: auto;
-              margin-right: auto;
-            }
-        </style>
     </head>
-    <body style="background-color:mintcream">
+    <body style="background-color:lightcyan">
       <nav class="navbar navbar-default navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">B.A.G.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page1.html">About Us</a>
+              <a class="nav-link" href="page1.html">Movies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page2.html">Q&A</a>
+              <a class="nav-link" href="page2.html">Shows</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">1</span></a>
+              <a class="nav-link" href="page3.html">Video Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page4.html">Board Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page5.html">Q&A</a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <div style="background-color:mintcream" class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 style="font-family:arial" class="display-4"><center>Welcome to the Official B.A.G. Website!</center></h1>
-        </div>
-      </div>
-      <!-- <a class="btn btn-danger" href="page4.html" role="button">Page 4</a> -->
-
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card text-center">
-            <div style="background-color:mistyrose" class="card-body">
-              <h2 class="card-title">Subscribe to our YouTube channel</h2>
-              <p style="font-size:20px" class="card-text">We provide top-notch non-clickbait gaming content and record-breaking speedruns. (hacked at 3.1M subscribers)</p>
-              <a href="https://www.youtube.com/channel/UCRo0kZQKcJzjd3XZ3oqvi7g" class="btn btn-danger btn-lg">Click Here</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card text-center">
-            <div style="background-color:lightcyan" class="card-body">
-              <h2 class="card-title">Follow our Twitter account</h2>
-              <p style="font-size:20px" class="card-text">We post original tweets and updates on video releases.</p>
-              <a href="https://twitter.com/baaaaag" class="btn btn-primary btn-lg">Click Here</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <br><br>
+      <h1 style="font-family:arial" class="display-4"><center>Things To Do: Quarantine Edition</center></h1>
       <br>
 
-      <img src="bag.jpg" alt="bag" class="center" height="450px" width="800px">
+      <h3><center>
+        Bored in your house with nothing to do? It can be tough being trapped in your house 24/7 but I got you covered.
+        I've compiled a list of my favorite movies, shows, video games, and board games that you can watch/play to help
+        pass the time.</center>
+      </h3>
+      <br><br>
+
+      <div class="card-deck">
+        <div class="card text-center">
+          <img src="movie.jpg" class="card-img-top" alt="movie" height="200px">
+          <div class="card-body">
+            <h4 class="card-title">Movies</h4>
+            <p class="card-text">Check out some of my favorite movies!</p>
+            <a href="page1.html" class="btn btn-primary">Click Here</a>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="show.jpg" class="card-img-top" alt="show" height="200px">
+          <div class="card-body">
+            <h4 class="card-title">Shows</h4>
+            <p class="card-text">Check out some of my favorite shows!</p>
+            <a href="page2.html" class="btn btn-primary">Click Here</a>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="v_game.jpg" class="card-img-top" alt="v_game" height="200px">
+          <div class="card-body">
+            <h4 class="card-title">Video Games</h4>
+            <p class="card-text">Check out some of my favorite video games!</p>
+            <a href="page3.html" class="btn btn-primary">Click Here</a>
+          </div>
+        </div>
+        <div class="card text-center">
+          <img src="b_game.jpg" class="card-img-top" alt="b_game" height="200px">
+          <div class="card-body">
+            <h4 class="card-title">Board Games</h4>
+            <p class="card-text">Check out some of my favorite board games!</p>
+            <a href="page4.html" class="btn btn-primary">Click Here</a>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
