--- a/page1.html
+++ b/page1.html
@@ -2,148 +2,173 @@
 
 <html lang="en">
     <head>
-        <title>Page 1</title>
+        <title>Things To Do</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <style>
+          .container {
+            display: flex;
+            justify-content: center;
+          }
+        </style>
     </head>
-    <body style="background-color:mintcream">
+    <body style="background-color:lightcyan">
       <nav class="navbar navbar-default navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">B.A.G.</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page1.html">About Us</a>
+              <a class="nav-link" href="page1.html">Movies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page2.html">Q&A</a>
+              <a class="nav-link" href="page2.html">Shows</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">1</span></a>
+              <a class="nav-link" href="page3.html">Video Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page4.html">Board Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page5.html">Q&A</a>
             </li>
           </ul>
         </div>
       </nav>
-      <br>
-      <h1><center>Whomst is B.A.G.?</center></h1>
-      <h4><center>
-        B.A.G. was founded by 5 young men who were sick and tired of a capitalist society and finally said enough is enough and decided to
-        give the people the quality content they needed while still holding on to what little virginity they had left. Learn more about these
-        true American heroes down below.</center>
-      </h4> <br>
 
-      <div class="row row-cols-1 row-cols-md-2">
+      <br>
+      <h1><center>Movies</center></h1>
+      <h5><center>Here are some of my all-time favorite movies. Check them out!</center></h5>
+      <br>
+
+      <div class="row row-cols-1 row-cols-md-3">
         <div class="col mb-4">
           <div class="card mb-3" style="max-width: 700px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="albi.jpg" class="card-img" alt="albi">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-10">
                 <div class="card-body">
-                  <h2 class="card-title">Albi</h2>
-                  <h5 class="card-text">Strengths:</h5>
-                  <p style="font-size:18px" class="card-text">Has the Albanian mob at his disposal<br>Doesn't have to worry about "be there or be square"<br>Lethal gas<br>Fruity Pebbles</p>
-                  <h5 class="card-text">Weakness:</h5>
-                  <p style="font-size:18px" class="card-text">TikTok baddies</p>
+                  <h2 class="card-title">Inception (2010)</h2>
+                  <h5 class="card-text">Rated: PG-13</h5>
+                  <h5 class="card-text">Genres: Action, Adventure, Sci-Fi</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt1375666/">Learn More</a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card mb-3" style="max-width: 700px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="dom.jpg" class="card-img" alt="dom">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Dom</h2>
-                  <h5 class="card-text">Strengths:</h5>
-                  <p style="font-size:18px" class="card-text">D1<br>Always finds the firmest grapes<br>Packin(we aint talking cod zombies)<br>Hits dat boy clean</p>
-                  <h5 class="card-text">Weakness:</h5>
-                  <p style="font-size:18px" class="card-text">Jif</p>
+                  <h2 class="card-title">The Matrix (1999)</h2>
+                  <h5 class="card-text">Rated: R</h5>
+                  <h5 class="card-text">Genres: Action, Sci-Fi</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0133093/?ref_=fn_al_tt_1">Learn More</a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card mb-3" style="max-width: 700px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="jason.jpg" class="card-img" alt="jason">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Jason</h2>
-                  <h5 class="card-text">Strengths:</h5>
-                  <p style="font-size:18px" class="card-text">Epic fork knife gamer<br>No hair in ass crack<br>Craisins<br>Long</p>
-                  <h5 class="card-text">Weakness:</h5>
-                  <p style="font-size:18px" class="card-text">Sworn oath to always "wash dem gray"</p>
+                  <h2 class="card-title">The Prestige (2006)</h2>
+                  <h5 class="card-text">Rated: PG-13</h5>
+                  <h5 class="card-text">Genres: Drama, Mystery, Sci-Fi</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0482571/?ref_=fn_al_tt_1">Learn More</a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card mb-3" style="max-width: 700px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="luke.jpg" class="card-img" alt="luke">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Luke</h2>
-                  <h5 class="card-text">Strengths:</h5>
-                  <p style="font-size:18px" class="card-text">Great throat<br>Toasted bread with butter<br>Carrying that WAGON<br>Promising career in the adult film industry</p>
-                  <h5 class="card-text">Weakness:</h5>
-                  <p style="font-size:18px" class="card-text">Daddario</p>
+                  <h2 class="card-title">Memento (2000)</h2>
+                  <h5 class="card-text">Rated: R</h5>
+                  <h5 class="card-text">Genres: Mystery, Thriller</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0209144/?ref_=fn_al_tt_1">Learn More</a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card mb-3" style="max-width: 700px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="mike.jpg" class="card-img" alt="mike">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Mike</h2>
-                  <h5 class="card-text">Strengths:</h5>
-                  <p style="font-size:18px" class="card-text">Virgin<br>Oatmeal<br>Will "beat you into the ground"<br>Kisses anyone(consensually)(guys only)(after 8 shots)</p>
-                  <h5 class="card-text">Weakness:</h5>
-                  <p style="font-size:18px" class="card-text">Virgin</p>
+                  <h2 class="card-title">The Departed (2006)</h2>
+                  <h5 class="card-text">Rated: R</h5>
+                  <h5 class="card-text">Genres: Crime, Drama, Thriller</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0407887/?ref_=nv_sr_srsg_0">Learn More</a>
                 </div>
               </div>
-            </div>
           </div>
         </div>
         <div class="col mb-4">
           <div class="card mb-3" style="max-width: 700px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="guy.jpg" class="card-img" alt="guy">
-              </div>
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="card-body">
-                  <h2 class="card-title">Bryson</h2>
-                  <h5 class="card-text">Strengths:</h5>
-                  <p style="font-size:18px" class="card-text">Large for his age<br>Over 12"<br>TSA PreCheck<br>A people person</p>
-                  <h5 class="card-text">Weakness:</h5>
-                  <p style="font-size:18px" class="card-text">Forgot to show up to tryouts</p>
+                  <h2 class="card-title">The Nice Guys (2010)</h2>
+                  <h5 class="card-text">Rated: R</h5>
+                  <h5 class="card-text">Genres: Action, Comedy, Crime</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt3799694/?ref_=fn_al_tt_1">Learn More</a>
                 </div>
               </div>
-            </div>
           </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Shutter Island (2010)</h2>
+                  <h5 class="card-text">Rated: R</h5>
+                  <h5 class="card-text">Genres: Mystery, Thriller</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt1130884/">Learn More</a>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">The Dark Knight Trilogy (2005) (2008) (2012)</h2>
+                  <h5 class="card-text">Rated: PG-13</h5>
+                  <h5 class="card-text">Genres: Action, Adventure, Crime, Drama</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0372784/?ref_=nv_sr_srsg_0">Learn More</a> about Batman Begins<br>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0468569/?ref_=fn_al_tt_1">Learn More</a> about The Dark Knight<br>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt1345836/?ref_=nv_sr_srsg_0">Learn More</a> about The Dark Knight Rises
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">The Lord of the Rings Trilogy (2001) (2002) (2003)</h2>
+                  <h5 class="card-text">Rated: PG-13</h5>
+                  <h5 class="card-text">Genres: Action, Adventure, Drama, Fantasy</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0120737/?ref_=nv_sr_srsg_0">Learn More</a> about LOTR: The Fellowship of the Ring<br>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0167261/?ref_=nv_sr_srsg_6">Learn More</a> about LOTR: The Two Towers<br>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0167260/?ref_=nv_sr_srsg_3">Learn More</a> about LOTR: The Return of the King
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+      <h3>Honorable Mentions: any of the 22 Marvel Cinematic Universe (MCU) movies. Seriously, they're all good.</h3>
+      <a style="font-size:18px" href="https://www.listchallenges.com/the-complete-list-of-mcu-movies">Learn More</a>
+      <br><br><br>
+
+      <h5><center>If you either didn't like my recommendations or finished watching all these movies, here are some top movie lists from IMDB and Rotten Tomatoes.</center></h5>
+      <div class="container">
+        <div class="button-wrapper">
+          <a href="https://www.imdb.com/list/ls055592025/" class="btn btn-warning btn-lg mx-auto">IMDB</a>
+          <a href="https://www.rottentomatoes.com/top/" class="btn btn-danger btn-lg mx-auto">Rotten Tomatoes</a>
         </div>
       </div>
     </body>
