--- a/page2.html
+++ b/page2.html
@@ -2,107 +2,165 @@
 
 <html lang="en">
     <head>
-        <title>Page 3</title>
+        <title>Things To Do</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <style>
+          .container {
+            display: flex;
+            justify-content: center;
+          }
+        </style>
     </head>
-    <body style="background-color:mintcream">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">B.A.G.</a>
+    <body style="background-color:lightcyan">
+      <nav class="navbar navbar-default navbar-fixed-top navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page1.html">About Us</a>
+              <a class="nav-link" href="page1.html">Movies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page2.html">Q&A</a>
+              <a class="nav-link" href="page2.html">Shows</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="page3.html">Notifications<span class="badge badge-light">1</span></a>
+              <a class="nav-link" href="page3.html">Video Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page4.html">Board Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page5.html">Q&A</a>
             </li>
           </ul>
         </div>
       </nav>
 
-      <div class="accordion" id="accordionExample">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                Who stole the money?
-              </button>
-            </h2>
-          </div>
+      <br>
+      <h1><center>Shows</center></h1>
+      <h5><center>Here are some of my all-time favorite shows. Check them out!</center></h5>
+      <br>
 
-          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-            <div class="card-body">
-              After years of research and investigation, leading scientists believe the ex-convict Traymond Brim nabbed the cash before making a quick escape in his aircraft. He was never seen again.
-            </div>
+      <div class="row row-cols-1 row-cols-md-3">
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Game of Thrones</h2>
+                  <h5 class="card-text">Rated: TV-MA</h5>
+                  <h5 class="card-text">Genres: Action, Adventure, Drama</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0944947/?ref_=nv_sr_srsg_0">Learn More</a>
+                </div>
+              </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                How often do we watch hentai?
-              </button>
-            </h2>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-            <div class="card-body">
-              True.
-            </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Money Heist</h2>
+                  <h5 class="card-text">Rated: TV-MA</h5>
+                  <h5 class="card-text">Genres: Action, Crime, Mystery</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt6468322/?ref_=fn_al_tt_1">Learn More</a>
+                </div>
+              </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Will there be a "face" reveal at 500k subscribers?
-              </button>
-            </h2>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-            <div class="card-body">
-              There will be a "face" reveal at 500k subscribers.
-            </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Daredevil</h2>
+                  <h5 class="card-text">Rated: TV-MA</h5>
+                  <h5 class="card-text">Genres: Action, Crime, Drama</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt3322312/?ref_=nv_sr_srsg_0">Learn More</a>
+                </div>
+              </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingFour">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                The beat go off?
-              </button>
-            </h2>
-          </div>
-          <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-            <div class="card-body">
-              *smack* *helicopter noise*
-            </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">The Punisher</h2>
+                  <h5 class="card-text">Rated: TV-MA</h5>
+                  <h5 class="card-text">Genres: Action, Adventure, Crime</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt5675620/?ref_=nv_sr_srsg_0">Learn More</a>
+                </div>
+              </div>
           </div>
         </div>
-        <div class="card">
-          <div class="card-header" id="headingFive">
-            <h2 class="mb-0">
-              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                Why was this website made?
-              </button>
-            </h2>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Black Mirror</h2>
+                  <h5 class="card-text">Rated: TV-MA</h5>
+                  <h5 class="card-text">Genres: Drama, Sci-Fi, Thriller</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt2085059/?ref_=nv_sr_srsg_0">Learn More</a>
+                </div>
+              </div>
           </div>
-          <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-            <div class="card-body">
-              I was supposed to edit the Stairs video like 6 years ago but never got around to it so this is my redemption arc.
-            </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">The Walking Dead</h2>
+                  <h5 class="card-text">Rated: TV-14/TV-MA</h5>
+                  <h5 class="card-text">Genres: Drama, Horror, Thriller</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt1520211/?ref_=fn_al_tt_1">Learn More</a>
+                </div>
+              </div>
           </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Lost</h2>
+                  <h5 class="card-text">Rated: TV-14</h5>
+                  <h5 class="card-text">Genres: Adventure, Drama, Fantasy</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0411008/?ref_=fn_al_tt_1">Learn More</a>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Supernatural</h2>
+                  <h5 class="card-text">Rated: TV-14</h5>
+                  <h5 class="card-text">Genres: Drama, Fantasy, Horror</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0460681/?ref_=nv_sr_srsg_0">Learn More</a>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card mb-3" style="max-width: 700px;">
+              <div class="col-md-12">
+                <div class="card-body">
+                  <h2 class="card-title">Avatar: The Last Airbender</h2>
+                  <h5 class="card-text">Rated: TV-Y7</h5>
+                  <h5 class="card-text">Genres: Animation, Action, Adventure</h5>
+                  <a style="font-size:18px" href="https://www.imdb.com/title/tt0417299/?ref_=nv_sr_srsg_0">Learn More</a>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+      <h5><center>If you either didn't like my recommendations or finished watching all these shows, here are some top shows lists from IGN and Rotten Tomatoes.</center></h5>
+      <div class="container">
+        <div class="button-wrapper">
+          <a href="https://www.ign.com/lists/top-100-tv-shows" class="btn btn-info btn-lg mx-auto">IGN</a>
+          <a href="https://www.rottentomatoes.com/top-tv/" class="btn btn-danger btn-lg mx-auto">Rotten Tomatoes</a>
         </div>
       </div>
     </body>
